; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-pxa/extr_spitz.c_spitz_mci_setpower.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-pxa/extr_spitz.c_spitz_mci_setpower.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { %struct.pxamci_platform_data* }
%struct.pxamci_platform_data = type { i32 }

@SPITZ_PWR_SD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.device*, i32)* @spitz_mci_setpower to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @spitz_mci_setpower(%struct.device* %0, i32 %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.pxamci_platform_data*, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.device*, %struct.device** %3, align 8
  %7 = getelementptr inbounds %struct.device, %struct.device* %6, i32 0, i32 0
  %8 = load %struct.pxamci_platform_data*, %struct.pxamci_platform_data** %7, align 8
  store %struct.pxamci_platform_data* %8, %struct.pxamci_platform_data** %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = shl i32 1, %9
  %11 = load %struct.pxamci_platform_data*, %struct.pxamci_platform_data** %5, align 8
  %12 = getelementptr inbounds %struct.pxamci_platform_data, %struct.pxamci_platform_data* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = and i32 %10, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %2
  %17 = load i32, i32* @SPITZ_PWR_SD, align 4
  %18 = call i32 @spitz_card_pwr_ctrl(i32 %17, i32 4)
  br label %22

19:                                               ; preds = %2
  %20 = load i32, i32* @SPITZ_PWR_SD, align 4
  %21 = call i32 @spitz_card_pwr_ctrl(i32 %20, i32 0)
  br label %22

22:                                               ; preds = %19, %16
  ret void
}

declare dso_local i32 @spitz_card_pwr_ctrl(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
